Configuração dos botões

--- a/index.html
+++ b/index.html
@@ -11,52 +11,77 @@
 
 <body>
     <h1>Consultar CEP</h1>
-    <form>
-        <label class="form-label" for="cep">CEP</label>
-        <input class="form-control" type="number" name="cep" id="cep">
-        <label class="form-label" for="logradouro">Logradouro</label>
-        <input class="form-control" type="text" name="logradouro" id="logradouro">
-        <label class="form-label" for="number">N°</label>
-        <input class="form-control" type="number" name="number" id="number">
-        <label class="form-label" for="complemento">Complemento</label>
-        <input class="form-control" type="text" name="complemento" id="complemento">
-        <label class="form-label" for="bairro">Bairro</label>
-        <input class="form-control" type="text" name="bairro" id="bairro">
-        <label class="form-label" for="uf">UF</label>
-        <select class="form-select" name="uf" id="uf">
-            <option value="">Selecione</option>
-            <option value="AC">Acre</option>
-            <option value="AL">Alagoas</option>
-            <option value="AP">Amapá</option>
-            <option value="AM">Amazonas</option>
-            <option value="BA">Bahia</option>
-            <option value="CE">Ceará</option>
-            <option value="DF">Distrito Federal</option>
-            <option value="ES">Espírito Santo</option>
-            <option value="GO">Goiás</option>
-            <option value="MA">Maranhão</option>
-            <option value="MT">Mato Grosso</option>
-            <option value="MS">Mato Grosso do Sul</option>
-            <option value="MG">Minas Gerais</option>
-            <option value="PA">Pará</option>
-            <option value="PB">Paraíba</option>
-            <option value="PR">Paraná</option>
-            <option value="PE">Pernambuco</option>
-            <option value="PI">Piauí</option>
-            <option value="RJ">Rio de Janeiro</option>
-            <option value="RN">Rio Grande do Norte</option>
-            <option value="RS">Rio Grande do Sul</option>
-            <option value="RO">Rondônia</option>
-            <option value="RR">Roraima</option>
-            <option value="SC">Santa Catarina</option>
-            <option value="SP">São Paulo</option>
-            <option value="SE">Sergipe</option>
-            <option value="TO">Tocantins</option>
-        </select>
+    <form class="row g-3">
+        <div class="col-md-2">
+            <label class="form-label" for="cep">CEP</label>
+            <input class="form-control" type="number" name="cep" id="cep">
+        </div>
+
+        <div class="col-md-6">
+            <label class="form-label" for="logradouro">Logradouro</label>
+            <input class="form-control" type="text" name="logradouro" id="logradouro">
+        </div>
+
+        <div class="col-md-2">
+            <label class="form-label" for="numero">N°</label>
+            <input class="form-control" type="numero" name="numero" id="numero">
+        </div>
+
+        <div class="col-md-10">
+            <label class="form-label" for="complemento">Complemento</label>
+            <input class="form-control" type="text" name="complemento" id="complemento">
+        </div>
+
+        <div class="col-md-6">
+            <label class="form-label" for="bairro">Bairro</label>
+            <input class="form-control" type="text" name="bairro" id="bairro">
+        </div>
+
+        <div class="col-md-2">
+            <label class="form-label" for="uf">UF</label>
+            <select class="form-select" name="uf" id="uf">
+                <option value="">Selecione</option>
+                <option value="AC">Acre</option>
+                <option value="AL">Alagoas</option>
+                <option value="AP">Amapá</option>
+                <option value="AM">Amazonas</option>
+                <option value="BA">Bahia</option>
+                <option value="CE">Ceará</option>
+                <option value="DF">Distrito Federal</option>
+                <option value="ES">Espírito Santo</option>
+                <option value="GO">Goiás</option>
+                <option value="MA">Maranhão</option>
+                <option value="MT">Mato Grosso</option>
+                <option value="MS">Mato Grosso do Sul</option>
+                <option value="MG">Minas Gerais</option>
+                <option value="PA">Pará</option>
+                <option value="PB">Paraíba</option>
+                <option value="PR">Paraná</option>
+                <option value="PE">Pernambuco</option>
+                <option value="PI">Piauí</option>
+                <option value="RJ">Rio de Janeiro</option>
+                <option value="RN">Rio Grande do Norte</option>
+                <option value="RS">Rio Grande do Sul</option>
+                <option value="RO">Rondônia</option>
+                <option value="RR">Roraima</option>
+                <option value="SC">Santa Catarina</option>
+                <option value="SP">São Paulo</option>
+                <option value="SE">Sergipe</option>
+                <option value="TO">Tocantins</option>
+            </select>
+        </div>
+
+        <div class="col-md-2">
             <label class="form-label" for="localidade">Localidade</label>
             <select class="form-select" name="localidade" id="localidade">
                 <option value="">Selecione</option>
             </select>
+        </div>
+
+        <div class="col-md-12">
+            <button class="btn btn-success">Enviar</button>
+            <button class="btn btn-light" type="reset">Limpar</button>
+        </div>
     </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
